# Automation1_BackupRestore

./: .gitignore  BackupRestore  BackupRestoreConfig.h.in  CMakeLists.txt
include/: Automation1.h  Automation1Command.h  Automation1Controller.h  Automation1DataCollection.h  Automation1DataSignal.h  Automation1Enum.h  Automation1Error.h  Automation1Files.h  Automation1Parameter.h  Automation1ParameterId.h  Automation1Status.h  Automation1StatusItem.h  Automation1Task.h  BackupRestoreConfig.h  backuprestore.h
src/: CMakeLists.txt  backuprestore.cxx
